feat: adding function of the download report
